--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "python.formatting.provider": "yapf",
+    "python.pythonPath": "D:\\ProgramData\\Anaconda3\\python.exe"
 }
